--- a/index.html
+++ b/index.html
@@ -4,58 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Interactive Polygon</title>
-  <style>
-    body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-      background-image: url('images/221461.jpg');
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-      font-family: Arial, sans-serif;
-    }
-
-    .main-container {
-      background: rgba(0, 0, 0, 0.7);
-      padding: 30px;
-      border-radius: 15px;
-      text-align: center;
-      color: white;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .title {
-      font-size: 40px;
-      font-weight: bold;
-      margin-bottom: 15px;
-    }
-
-    .description {
-      font-size: 30px;
-      line-height: 1.4;
-      margin-bottom: 20px;
-    }
-
-    .highlight {
-      font-weight: bold;
-      color: #2980b9;
-    }
-
-    svg {
-      width: 500px;
-      height: 500px;
-    }
-
-    polygon {
-      stroke: black;
-      stroke-width: 3;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
